# cookiechain

./: 1_initial_migration.rs  Cargo.toml  lib.rs  package-lock.json  package.json
contracts/: Cookiechain.sol
cookiechains/: lib.rs
cookiechains-test/: Cargo.toml  lib.rs
mytoken/: Cargo.toml
src/: lib.rs
src/js/: app.js  popup.js
