[package]
name = "cookiechain"
version = "0.1.0"
authors = ["Loc Tran <loc@example.com>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }
scale = { package = "parity-scale-codec", version = "0.1.0" }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[lib]
name = "cookiechain"
path = "src/lib.rs"

[dev-dependencies]
ink_e2e = "4.2.0"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
